[gd_scene load_steps=5 format=2]

[ext_resource path="res://Friends/Floppa.png" type="Texture" id=1]
[ext_resource path="res://Friends/Floppa.gd" type="Script" id=2]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 26.0

[node name="Floppa" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -4, 3.5 )
scale = Vector2( 1.5, 1.35 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -11 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -2 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="FireballPos1" type="Position2D" parent="."]
position = Vector2( -32, -8 )

[node name="FireballPos2" type="Position2D" parent="."]
position = Vector2( -32, -56 )

[node name="FireballPos3" type="Position2D" parent="."]
position = Vector2( -32, 40 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
